--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "wbw121124blog",
-  "private": true,
-  "version": "0.0.2",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "highlight.js": "^11.11.1",
-    "katex": "^0.16.27",
-    "markdown-it": "^14.1.0",
-    "markdown-it-anchor": "^9.2.0",
-    "markdown-it-emoji": "^3.0.0",
-    "markdown-it-footnote": "^4.0.0",
-    "markdown-it-highlightjs": "^4.2.0",
-    "markdown-it-math": "^5.2.1",
-    "mathup": "^1.0.0",
-    "tailwindcss": "^4.1.18",
-    "vite-ssg": "^28.2.2",
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.4"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.2.4"
-  }
+	"name": "wbw121124blog",
+	"private": true,
+	"version": "0.0.3",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"br": "npm run build && npx serve dist"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.18",
+		"highlight.js": "^11.11.1",
+		"katex": "^0.16.27",
+		"markdown-it": "^14.1.0",
+		"markdown-it-anchor": "^9.2.0",
+		"markdown-it-emoji": "^3.0.0",
+		"markdown-it-footnote": "^4.0.0",
+		"markdown-it-highlightjs": "^4.2.0",
+		"markdown-it-math": "^5.2.1",
+		"mathup": "^1.0.0",
+		"tailwindcss": "^4.1.18",
+		"vite-ssg": "^28.2.2",
+		"vue": "^3.5.24",
+		"vue-router": "^4.6.4"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-vue": "^6.0.1",
+		"vite": "^7.2.4"
+	}
 }
